# AISchool-shared-backend

./: .gitignore  LICENSE  MANIFEST.IN  README.md  pyproject.toml  r.txt
shared_backend/: __init__.py  manage.py
shared_backend/api/: permissions.py  urls.py
shared_backend/api/models/: __init__.py  authenticateable.py  with_auth_id.py  with_plans.py  with_profile_type.py  with_uuid.py
shared_backend/api/serializers/: __init__.py  create_user.py
shared_backend/api/views/: __init__.py  create_user.py
shared_backend/core/: __init__.py  asgi.py  urls.py  wsgi.py
shared_backend/core/settings/: __init__.py  auth_schema.py  helpers.py
shared_backend/core/settings/defaults/: __init__.py  databases.py  installed_apps.py  middleware.py  misc.py  rest_framework.py  secrets.py  security.py  services.py  shared_files.py  spectacular.py  static_files.py  templates.py
shared_backend/services/: apps.py  permissions.py
shared_backend/services/models/: __init__.py  client.py  consumer_caller.py  service.py  service_storage.py  session.py  token_storage.py
shared_backend/services/views/: __init__.py
shared_backend/services/views/consumers/: __init__.py  base.py
shared_backend/services/views/producers/: __init__.py  base.py
shared_backend/utils/: exception_handler.py  i18n_middleware.py  parsers.py  renderers.py  transformers.py
shared_backend/utils/exceptions/: __init__.py  classes.py  schema.py
shared_backend/utils/jwt_authentification/: __init__.py  service.py  user.py
shared_backend/utils/jwt_authentification/jwks/: __init__.py  decode_token.py  public_key.py
(+3 files in other folders)
